<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunningTracker</string>

    <string-array name="gender_options">
        <item>Laki-laki</item>
        <item>Perempuan</item>
        <item>Tidak ingin memberi tahu</item>
    </string-array>
    <string name="journey_title">Lets share your journey!</string>
    <string name="hint_tanggal">Tanggal</string>
    <string name="hint_jarak">Jarak Lari (km)</string>
    <string name="hint_durasi">Durasi (menit)</string>
    <string name="save">Save</string>

    <string name="halo">Halo \uD83D\uDC4B</string>
    <string name="running_tracker">Running Tracker</string>
    <string name="track_run_desc">Track your run. Anytime, anywhere.</string>
    <string name="page_2">Page 2</string>
    <string name="next">Next</string>

</resources>